last weird bug seems to be solved

--- a/views/administration.html
+++ b/views/administration.html
@@ -1,15 +1,30 @@
 
                   <section>
-                    <img src="Bobine.jpg">
-                    <p>Bobine</p>
+                    <img src="HoPolloT1.png">
+                    <p>HoPolloT1</p>
                   </section>
-                <section>
-                  <video autoplay loop>
-                  <source src="movie.mp4">
-                  <track src="movie.ttk" kind="subtitles" srclang="fr" label="Français">
-                    Ce navigateur ne prend visiblement pas en charge le tag video.
-                  </video> 
-                </section><footer>
+                  <section>
+                    <img src="HoPolloT2.png">
+                    <p>HoPolloT2</p>
+                  </section>
+                  <section>
+                    <img src="HoPolloT3.png">
+                    <p>HoPolloT3</p>
+                  </section>
+                  <section>
+                    <embed src="sample.pdf">
+                  </Section>
+                  <section>
+                    <img src="SEKeyTutorial.png">
+                    <p>SEKeyTutorial</p>
+                  </section><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
+<footer>
 	<h1 id='horloge'>Horloge indisponible pour le moment.</h1>
 </footer>
 
@@ -29,6 +44,7 @@
 
 	section img {
     height: 80vh;
+    max-width: 100vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
