--- a/views/cdi.html
+++ b/views/cdi.html
@@ -1,11 +1,11 @@
 
                   <section>
-                    <embed src="POLLOZEC_EmploiDuTemps.pdf">
-                  </Section>
-                  <section>
                     <img src="Corail Mayotte.jpg">
                     <p>Corail Mayotte</p>
                   </section>
+                  <section>
+                    <embed src="POLLOZEC_EmploiDuTemps.pdf">
+                  </Section>
                   <section>
                     <img src="Mayotte sur la carte.png">
                     <p>Mayotte sur la carte</p>
@@ -19,9 +19,24 @@
                     <p>IlotBouzi</p>
                   </section>
                   <section>
+                    <img src="Screenshot from 2019-09-10 09-41-13.png">
+                    <p>Screenshot from 2019-09-10 09-41-13</p>
+                  </section>
+                  <section>
                     <img src="Mont Choungui.jpg">
                     <p>Mont Choungui</p>
-                  </section><footer>
+                  </section>
+                  <section>
+                    <img src="Screenshot from 2019-09-09 08-19-51.png">
+                    <p>Screenshot from 2019-09-09 08-19-51</p>
+                  </section><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
+<footer>
 	<h1 id='horloge'>Horloge indisponible pour le moment.</h1>
 </footer>
 
@@ -41,6 +56,7 @@
 
 	section img {
     height: 80vh;
+    max-width: 100vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
