--- a/views/viesco.html
+++ b/views/viesco.html
@@ -1,12 +1,22 @@
 
+                  <section>
+                    <img src="Bobine.jpg">
+                    <p>Bobine</p>
+                  </section>
                 <section>
-                  <h1>Bonnes Vacances</h1>
-                  <p>Reprise des cours Lundi</p>
-                </section>
-                <section>
-                  <h1>Horaires Bus</h1>
-                  <p>Pas de bus le samedi après-midi ni dimanche.</p>
-                </section><footer>
+                  <video autoplay loop>
+                  <source src="movie.mp4">
+                  <track src="movie.ttk" kind="subtitles" srclang="fr" label="Français">
+                    Ce navigateur ne prend visiblement pas en charge le tag video.
+                  </video> 
+                </section><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
+<footer>
 	<h1 id='horloge'>Horloge indisponible pour le moment.</h1>
 </footer>
 
@@ -26,6 +36,7 @@
 
 	section img {
     height: 80vh;
+    max-width: 100vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
