--- a/views/administration.html
+++ b/views/administration.html
@@ -17,6 +17,10 @@
                   <section>
                     <img src="SEKeyTutorial.png">
                     <p>SEKeyTutorial</p>
+                  </section>
+                  <section>
+                    <img src="Screenshot from 2019-01-07 07-36-07.png">
+                    <p>Screenshot from 2019-01-07 07-36-07</p>
                   </section><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
