Added Auth to db feature

--- a/views/viesco.html
+++ b/views/viesco.html
@@ -1,5 +1,9 @@
 
                   <section>
+                    <img src="updateBetterStreamerDashboard.png">
+                    <p>updateBetterStreamerDashboard</p>
+                  </section>
+                  <section>
                     <img src="Bobine.jpg">
                     <p>Bobine</p>
                   </section>
