--- a/views/exterieur.html
+++ b/views/exterieur.html
@@ -1,30 +1,12 @@
 
-                  <section>
-                    <embed src="CAZALS_EmploiDuTemps.pdf">
-                  </Section>
-                  <section>
-                    <img src="HoPolloT1.png">
-                    <p>HoPolloT1</p>
-                  </section>
-                  <section>
-                    <img src="HoPolloT2.png">
-                    <p>HoPolloT2</p>
-                  </section>
-                  <section>
-                    <img src="HoPolloT3.png">
-                    <p>HoPolloT3</p>
-                  </section>
-                  <section>
-                    <embed src="sample.pdf">
-                  </Section>
-                  <section>
-                    <img src="SEKeyTutorial.png">
-                    <p>SEKeyTutorial</p>
-                  </section>
-                  <section>
-                    <img src="Screenshot from 2019-01-07 07-36-07.png">
-                    <p>Screenshot from 2019-01-07 07-36-07</p>
-                  </section><head>
+                <section>
+                  <h1>Bonnes Vacances</h1>
+                  <p>Reprise des cours Lundi</p>
+                </section>
+                <section>
+                  <h1>Horaires Bus</h1>
+                  <p>Pas de bus le samedi après-midi ni dimanche.</p>
+                </section><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
